force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/Dedicated_Internal_Salesforce_Helpdesk__c.object-meta.xml
<CustomObject>
    <label>D.I.S.H.</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>DISH Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>D.I.S.H.</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>