force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Account_to_be_Merged__c.field-meta.xml
<CustomField>
    <fullName>Account_to_be_Merged__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This account will be merged into the Primary Account</inlineHelpText>
    <label>Account to be Merged</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>D.I.S.H. (Account to be Merged)</relationshipLabel>
    <relationshipName>D_I_S_H1</relationshipName>
    <type>Lookup</type>
</CustomField>