force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>