force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Additional_Contact_to_be_Merged__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_to_be_Merged__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Contact to be Merged</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>D.I.S.H. (Additional Contact to be Merged)</relationshipLabel>
    <relationshipName>D_I_S_H3</relationshipName>
    <type>Lookup</type>
</CustomField>