force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Approved_in_UAT__c.field-meta.xml
<CustomField>
    <fullName>Approved_in_UAT__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is to be checked by the ticket requester once the proposed changes have been accepted in UAT and can be moved to Production.</inlineHelpText>
    <label>Approved in UAT</label>
    <type>Checkbox</type>
</CustomField>