force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Configuration_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Request_Type__c</fullName>
    <inlineHelpText>Feature - Create something new
Enhancement - Add fields or dropdown options, etc
Fix - Use when something is not working correctly</inlineHelpText>
    <label>Configuration Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Fix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>