force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Contact_to_be_Merged__c.field-meta.xml
<CustomField>
    <fullName>Contact_to_be_Merged__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact to be Merged</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>D.I.S.H. (Contact to be Merged)</relationshipLabel>
    <relationshipName>Contact2</relationshipName>
    <type>Lookup</type>
</CustomField>