force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Please describe the request in detail.</inlineHelpText>
    <label>Description</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>