force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Dish_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Dish_Request_Status__c</fullName>
    <inlineHelpText>Updated by IT</inlineHelpText>
    <label>Dish Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold due to technology limitation</fullName>
            </value>
            <value>
                <fullName>Awaiting Requester Response</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Requestor comment pending</fullName>
                <label>Requester comment pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>