force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Docusign_User__c.field-meta.xml
<CustomField>
    <fullName>Docusign_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Docusign User?</label>
    <type>Checkbox</type>
</CustomField>