force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Follow_Up_SLA_Time__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_SLA_Time__c</fullName>
    <formula>LastModifiedDate + (4/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow-Up SLA Time</label>
    <type>DateTime</type>
</CustomField>