force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/In_UAT_Sandbox_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>In_UAT_Sandbox_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In UAT Sandbox for Approval</label>
    <type>Checkbox</type>
</CustomField>