force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Lightning_related__c.field-meta.xml
<CustomField>
    <fullName>Lightning_related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lightning related</label>
    <type>Checkbox</type>
</CustomField>