force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Merge_fields_to_be_aware_of__c.field-meta.xml
<CustomField>
    <fullName>Merge_fields_to_be_aware_of__c</fullName>
    <description>Any particular field(s) that should be kept that differ from the Master Contact.</description>
    <inlineHelpText>Any particular field(s) that should be kept that differ from the Master Contact.</inlineHelpText>
    <label>Merge fields to be aware of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>