force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/New_User_Email__c.field-meta.xml
<CustomField>
    <fullName>New_User_Email__c</fullName>
    <label>New User Email</label>
    <type>Email</type>
</CustomField>