force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/New_User_First_Name__c.field-meta.xml
<CustomField>
    <fullName>New_User_First_Name__c</fullName>
    <label>New User First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>