force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/New_User_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>New_User_Last_Name__c</fullName>
    <label>New User Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>