force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/New_User_Title__c.field-meta.xml
<CustomField>
    <fullName>New_User_Title__c</fullName>
    <label>New User Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>