force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email__c</fullName>
    <inlineHelpText>Only needed if they are a current certified Instructor.</inlineHelpText>
    <label>Personal Email</label>
    <type>Email</type>
</CustomField>