force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/PHSS_Business__c.field-meta.xml
<CustomField>
    <fullName>PHSS_Business__c</fullName>
    <label>PHSS Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service Delivery</fullName>
            </value>
            <value>
                <fullName>Nurse Assistant Training</fullName>
            </value>
            <value>
                <fullName>Product Team</fullName>
            </value>
            <value>
                <fullName>Business Operations</fullName>
            </value>
            <value>
                <fullName>Customer Ops &amp; Admin Team</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Brand Licensing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>