force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Account that will remain after merge</inlineHelpText>
    <label>Primary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>D.I.S.H.</relationshipLabel>
    <relationshipName>D_I_S_H</relationshipName>
    <type>Lookup</type>
</CustomField>