force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the master record</description>
    <inlineHelpText>This is the master record</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>D.I.S.H.</relationshipLabel>
    <relationshipName>D_I_S_H</relationshipName>
    <type>Lookup</type>
</CustomField>