force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/RCLC_Issue__c.field-meta.xml
<CustomField>
    <fullName>RCLC_Issue__c</fullName>
    <label>RCLC Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login Issue</fullName>
            </value>
            <value>
                <fullName>Password Reset Issue</fullName>
            </value>
            <value>
                <fullName>Launching Content</fullName>
            </value>
            <value>
                <fullName>Content on IC (Instructor resources)</fullName>
            </value>
            <value>
                <fullName>Course Links</fullName>
            </value>
            <value>
                <fullName>Outage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>