force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>D.I.S.H.</relationshipLabel>
    <relationshipName>D_I_S_H</relationshipName>
    <type>Lookup</type>
</CustomField>