force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Report_Object__c.field-meta.xml
<CustomField>
    <fullName>Report_Object__c</fullName>
    <inlineHelpText>Only for Salesforce objects, not Saba or webi reports.</inlineHelpText>
    <label>Report Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Training Events</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>