force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Requested_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Completion_Date__c</fullName>
    <inlineHelpText>Date that you would like this request to be completed</inlineHelpText>
    <label>Requested Completion Date</label>
    <type>Date</type>
</CustomField>