force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Saba_User_Roles__c.field-meta.xml
<CustomField>
    <fullName>Saba_User_Roles__c</fullName>
    <inlineHelpText>Only needed if you are requesting user get access to Saba LMS</inlineHelpText>
    <label>SABA User Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chapter Manager (Read Only)</fullName>
            </value>
            <value>
                <fullName>Registrar</fullName>
            </value>
            <value>
                <fullName>Offering Administration</fullName>
            </value>
            <value>
                <fullName>Human Capital Administration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>