force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/SABA_Username__c.field-meta.xml
<CustomField>
    <fullName>SABA_Username__c</fullName>
    <inlineHelpText>For DEACTIVATION requests please only enter the Saba UN if &#39;Saba LMS&#39; is selected in User Access.
For CREATION requests please enter the new hire&#39;s newly created Saba UN so that roles and permissions are added to the correct Saba record.</inlineHelpText>
    <label>SABA Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>