force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/SF_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>SF_Case_Number__c</fullName>
    <label>SF Case #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>