force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Triage_Category__c.field-meta.xml
<CustomField>
    <fullName>Triage_Category__c</fullName>
    <label>Triage Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>