force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/User_Access__c.field-meta.xml
<CustomField>
    <fullName>User_Access__c</fullName>
    <label>User Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Salesforce Training Sandbox</fullName>
            </value>
            <value>
                <fullName>Skedulo</fullName>
            </value>
            <value>
                <fullName>Instructor&#39;s Corner</fullName>
            </value>
            <value>
                <fullName>PHSS SharePoint</fullName>
            </value>
            <value>
                <fullName>SABA LMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>