force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/User_Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>User_Deactivation_Date__c</fullName>
    <inlineHelpText>Date you would like access terminated</inlineHelpText>
    <label>User Deactivation Date</label>
    <type>Date</type>
</CustomField>