force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/User_is_a_Certified_Instructor__c.field-meta.xml
<CustomField>
    <fullName>User_is_a_Certified_Instructor__c</fullName>
    <inlineHelpText>If this user becomes an Instructor at a later date, please notify Shweta.Kohli@redcross.org</inlineHelpText>
    <label>User is a Certified Instructor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>