force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/User_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Request_Type__c</fullName>
    <inlineHelpText>If existing User change, please provide previous position in the Additional Comments field</inlineHelpText>
    <label>User Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New User</fullName>
            </value>
            <value>
                <fullName>Existing User Change Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>