force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/User_to_Deactivate__c.field-meta.xml
<CustomField>
    <fullName>User_to_Deactivate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User to Deactivate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>D_I_S_H</relationshipName>
    <type>Lookup</type>
</CustomField>