force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/fields/Users_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Users_Impacted__c</fullName>
    <label>Users Impacted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 User</fullName>
            </value>
            <value>
                <fullName>Entire Team</fullName>
            </value>
            <value>
                <fullName>Organization Wide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>