force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/recordTypes/Account_Merge_Requests.recordType-meta.xml
<RecordType>
    <fullName>Account_Merge_Requests</fullName>
    <active>true</active>
    <description>Use this record type to request an Account Merge</description>
    <label>Account Merge Requests</label>
</RecordType>