force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/recordTypes/Configuration_Request.recordType-meta.xml
<RecordType>
    <fullName>Configuration_Request</fullName>
    <active>true</active>
    <description>Use this to request new fields, processes, etc.</description>
    <label>Configuration Request</label>
</RecordType>