force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/recordTypes/Contact_Merge_Requests.recordType-meta.xml
<RecordType>
    <fullName>Contact_Merge_Requests</fullName>
    <active>true</active>
    <description>Use this to request Contacts to be merged.</description>
    <label>Contact Merge Requests</label>
</RecordType>