force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/recordTypes/RCLC.recordType-meta.xml
<RecordType>
    <fullName>RCLC</fullName>
    <active>true</active>
    <description>Used to request assistance for Learning Center Issues</description>
    <label>RCLC</label>
</RecordType>