force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/recordTypes/Report_Request.recordType-meta.xml
<RecordType>
    <fullName>Report_Request</fullName>
    <active>true</active>
    <description>Use this process to request creation of a new report</description>
    <label>Report Request</label>
</RecordType>