force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/recordTypes/User_Creation_Request.recordType-meta.xml
<RecordType>
    <fullName>User_Creation_Request</fullName>
    <active>true</active>
    <description>Use this process to request creation of a new user</description>
    <label>User Creation Request</label>
</RecordType>