force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/recordTypes/User_Deactivation.recordType-meta.xml
<RecordType>
    <fullName>User_Deactivation</fullName>
    <active>true</active>
    <description>Use this process to request deactivation of a User</description>
    <label>User Deactivation</label>
</RecordType>