force-app/main/default/objects/Dedicated_Internal_Salesforce_Helpdesk__c/validationRules/TSC_DISH_ticket.validationRule-meta.xml
<ValidationRule>
    <fullName>TSC_DISH_ticket</fullName>
    <active>true</active>
    <description>Ensure that when an TSC agent opens an RCLC dish ticket, the Case number is provided.</description>
    <errorConditionFormula>AND(
 RecordType.Id = &quot;01221000000DkFW&quot;,
 OR ($Profile.Id = &quot;00e21000000QQGi&quot;, $Profile.Id =&quot;00e21000000QQGd&quot;),
 ISBLANK(Related_Case__c)
)</errorConditionFormula>
    <errorMessage>You must enter the Case number into the &quot;Related Case&quot; field.</errorMessage>
</ValidationRule>